data/derived/fa15/progs/unify/prog3920.ml.out
Characters 21-28:
  let c3 () = failwith (7,2,2);;
                       ^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type string
